// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute crypto api should return success 1`] = `
{
  "data": {
    "result": 4478.930333561968,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 4478.930333561968,
  "statusCode": 200,
}
`;

exports[`execute crypto api with invalid base should return failure 1`] = `
{
  "error": {
    "feedID": "NON-EXISTING/USD",
    "message": "Unable to find coin: non-existing in DP response. This could be an issue with overrides, input params or the DP",
    "name": "AdapterError",
  },
  "jobRunID": "1",
  "status": "errored",
  "statusCode": 500,
}
`;

exports[`execute globalmarketcap endpoint alias should return success 1`] = `
{
  "data": {
    "result": 1139638848309,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 1139638848309,
  "statusCode": 200,
}
`;

exports[`execute marketcap api should return success 1`] = `
{
  "data": {
    "result": 527538906196,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 527538906196,
  "statusCode": 200,
}
`;

exports[`execute totalMarketCap api should return success 1`] = `
{
  "data": {
    "result": 1139638848309,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 1139638848309,
  "statusCode": 200,
}
`;
